[feat] Problem6 validateInput 작성